# Crypto-DP

./: .gitignore  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICK_SETUP.md  README.md  check_gcs_files.py  health_server.py  main.py  pyproject.toml  railway.toml  requirements-pipeline.txt  requirements.txt  start.sh  start_dashboard.sh  test_level2_comprehensive.py  test_level2_connection.py  test_ticker_fields.py  troubleshoot_microstructure.sh  validate_schema_parity.py
.github/workflows/: ci-pipeline.yml
app/dashboard/: .dockerignore  Dockerfile  README_AI.md  requirements.txt  streamlit_dashboard.py
dashboard/: Dockerfile  streamlit_dashboard.py
data-pipeline/: .dockerignore  .gitignore  DATA_FIELDS.md  Dockerfile  FIXING_ZERO_METRICS.md  METRICS_WITHOUT_LEVEL2.md  MICROSTRUCTURE_METRICS.md  binance_kafka_producer.py  coinbase_kafka_producer.py  gcs_kafka_consumer.py  kafka_1min_aggregator.py  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh  start_pipeline_railway.sh
data-pipeline-batch/: .env.example  .gitignore  Dockerfile  Dockerfile.airflow  batch_data_pipeline.sh  docker-compose.yml  docker.sh  railway.toml  raw_webhook_to_gcs.py  raw_webhook_to_gcs_test.py  requirements.txt  start-airflow.sh
data-pipeline-batch/dags/: batch_etl_dag.py  batch_etl_dag_1min_test.py
data-pipeline-batch/tests/: test_dag_structure.py  test_raw_webhook_to_gcs.py
data-pipeline/alerts/: __init__.py  discord_alerts.py  pipeline_monitor.py  (+1 more)
front_end/: .gitignore  Dockerfile  README.md  requirements.txt  rxconfig.py  start_dashboard.sh
monitoring/: STREAMLIT_DEPLOYMENT.md  streamlit_dashboard.py
(+23 files in other folders)
